# asibot-configuration-files

./: .gitignore  CMakeLists.txt  README.md
cmake/: DesktopShortcutHelpers.cmake
cmake/template/: ASIBOT_CONFIGURATION_FILESConfig.cmake.in  asibot-apps.desktop.in
cmake/templates/: asibot-apps.desktop.in
scripts/: CMakeLists.txt
scripts/bash/: asibotSim
scripts/gnome/: ASIBOT Apps yarpmanager.desktop  asibot-apps.desktop
share/: CMakeLists.txt
share/applications/: asibotBase.xml  asibotSimBase.xml  asibotTools.xml
share/asibotBase/: CMakeLists.txt
share/asibotBase/scripts/: asibotBase.xml
share/asibotSimBase/: CMakeLists.txt
share/asibotSimBase/scripts/: asibotSimBase.xml
share/asibotTools/: CMakeLists.txt
share/contexts/kinematics/: asibot-armKinematics.ini
share/contexts/launchCanBus/: manipulator-lacquey.ini  manipulator.ini
share/kinematics/: CMakeLists.txt  armKinematics.ini
share/robots/asibot/: config.ini
share/robots/asibot/devices/: calib-generic.ini  common-ipos.ini  id1-ipos.ini  id102-cui.ini  id103-cui.ini  id104-cui.ini  id2-ipos.ini  id3-ipos.ini  id4-ipos.ini  id5-ipos.ini  id6-lacquey.ini  pcan-arm.ini
share/robots/asibot/hardware/: hd-160.ini  ipos-3604-vx.ini  kollmorgen-qt1917.ini  renco-rcml15.ini
